--- a/scout-detail.html
+++ b/scout-detail.html
@@ -22,6 +22,7 @@
 <!--    Custom CSS-->
     <link rel="stylesheet" href="style/main.css">
 
+    </head>
 <body id="bs-override">
 
 
@@ -50,7 +51,7 @@
                     <form id="taskForm">
                             <div class="form-group">
                               <label for="exampleInputEmail1">HR ID</label>
-                              <input type="idHrid" name="hrid" class="form-control" id="idHrid" aria-describedby="emailHelp" placeholder="Enter your HR ID">
+                              <input type="text" name="hrid" class="form-control" id="idHrid" aria-describedby="emailHelp" placeholder="Enter your HR ID">
                             </div>
                             <div class="form-group">
                               <label for="idTask">Task</label>
