--- a/scout.html
+++ b/scout.html
@@ -17,13 +17,29 @@
 <body id="bs-override">
 
 <div class="bg-color-half"></div>
-<header>
-
+<header style="margin-top : 100px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+                <a class="navbar-brand" href="#">LOGO</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link pfont sm-font" href="scout.html">SCOUT</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link pfont sm-font" href="todo.html">TO DO</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
 </header>
 
 <main>
     <div class="center">
-        <p class="big-font hfont text-white text-center">To-Do List</p>
+        <p class="big-font hfont text-white text-center">Scout</p>
     </div>
 
     <div class="d-flex justify-content-around" style="margin : 250px 200px 0 200px">
