--- a/scout-detail.html
+++ b/scout-detail.html
@@ -29,7 +29,24 @@
 
 </div>
 
-<header>
+<header style="margin-top : 100px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+                <a class="navbar-brand" href="#">LOGO</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link pfont sm-font" href="scout.html">SCOUT</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link pfont sm-font" href="todo.html">TO DO</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
 <p class="medium-font hfont" style="padding-top: 50px; padding-left:50px;"> Scout </p>
 </header>
 
@@ -89,10 +106,12 @@
     }
 
     var userid;
+    var vusername;
 
-    function addTask(uid){
+    function addTask(uid, uname){
         $('#addTaskForm').modal('show');
         userid = uid;
+        vusername = uname;
     }
 
     $(document).ready(function() {
@@ -141,7 +160,7 @@
                     table.append('<td>' + data[i].acc_edu + '</td>');
                     table.append('<td>' + data[i].acc_wp1 + '</td>');
                     table.append('<td>' + data[i].acc_wp2 + '</td>');
-                    table.append('<td> <button onclick="addTask(&#34;' + data[i].acc_id + '&#34;)" class="btn btn-primary text-white">Add</button> </td>');
+                    table.append(`<td> <button onclick="addTask('` + data[i].acc_id + `','` + data[i].acc_name + `')" class="btn btn-primary text-white">Add</button> </td>`);
                     
                     tablebody.append(table);
                 });
@@ -165,7 +184,8 @@
         var obj = { 
                 task:  $('#idTask').val(),
 	            isDone: false,
-	            due: $('#idDue').val()
+	            due: $('#idDue').val(),
+                acc_name: vusername
                 };
         var sendData = JSON.stringify(obj);
 
